--- a/examples/cube/Cargo.toml
+++ b/examples/cube/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "term3d"
+name = "cube"
 version = "0.1.0"
 authors = ["Luke Wilson <asmoaesl@gmail.com>"]
 edition = "2018"
 
-[lib]
-path = "src/lib.rs"
-
 [dependencies]
-easycurses = "0.12"
-ordered-float = "1.0.1"
+term3d = {path = "../../"}
